unpackaged/main/default/objects/Opportunity/fields/Reason_for_Grant_Request_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Grant_Request_Legacy__c</fullName>
    <inlineHelpText>This field was populated for submissions prior to 11-17-2020.</inlineHelpText>
    <label>z_Reason for Grant Request (Legacy)</label>
    <type>TextArea</type>
</CustomField>