unpackaged/main/default/objects/Opportunity/fields/Reengaged__c.field-meta.xml
<CustomField>
    <fullName>Reengaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Reengaged</label>
    <type>Checkbox</type>
</CustomField>