unpackaged/main/default/objects/Opportunity/fields/Scholarship__c.field-meta.xml
<CustomField>
    <fullName>Scholarship__c</fullName>
    <label>Scholarship/Tuition Reductions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>