unpackaged/main/default/objects/Opportunity/fields/School_of_Record_App_Sent__c.field-meta.xml
<CustomField>
    <fullName>School_of_Record_App_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_School of Record App Sent</label>
    <type>Checkbox</type>
</CustomField>