unpackaged/main/default/objects/Opportunity/fields/School_of_Record_Approved__c.field-meta.xml
<CustomField>
    <fullName>School_of_Record_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_School of Record Approved</label>
    <type>Checkbox</type>
</CustomField>