unpackaged/main/default/objects/Opportunity/fields/School_of_Record_HubSpot__c.field-meta.xml
<CustomField>
    <fullName>School_of_Record_HubSpot__c</fullName>
    <label>z_School of Record (HubSpot)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>