unpackaged/main/default/objects/Opportunity/fields/Second_Semester_Location__c.field-meta.xml
<CustomField>
    <fullName>Second_Semester_Location__c</fullName>
    <label>z_Second Semester Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>