unpackaged/main/default/objects/Opportunity/fields/Senior_Class_Schedule_Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>Senior_Class_Schedule_Submitted_On__c</fullName>
    <label>Senior Class Schedule Submitted On</label>
    <type>Date</type>
</CustomField>