unpackaged/main/default/objects/Opportunity/fields/SF_ID18_Opp__c.field-meta.xml
<CustomField>
    <fullName>SF_ID18_Opp__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF_ID18_Opp</label>
    <type>Text</type>
</CustomField>