unpackaged/main/default/objects/Opportunity/fields/Starting_Semester_Full_Year__c.field-meta.xml
<CustomField>
    <fullName>Starting_Semester_Full_Year__c</fullName>
    <label>z_Starting Semester-Full Year</label>
    <length>100</length>
    <type>Text</type>
</CustomField>