unpackaged/main/default/objects/Opportunity/fields/Status_for_Spring__c.field-meta.xml
<CustomField>
    <fullName>Status_for_Spring__c</fullName>
    <label>z_Status for Spring</label>
    <length>100</length>
    <type>Text</type>
</CustomField>