unpackaged/main/default/objects/Opportunity/fields/Stripe_Email__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Email__c</fullName>
    <label>Stripe Email</label>
    <type>Email</type>
</CustomField>