unpackaged/main/default/objects/Opportunity/fields/Student_Application_Form_Full__c.field-meta.xml
<CustomField>
    <fullName>Student_Application_Form_Full__c</fullName>
    <description>This link is autogenerated by FormStack for Opportunity records.  It includes both Page 1 and 2 of the application.</description>
    <inlineHelpText>This link is autogenerated for Opportunities and can be emailed to students to complete their application. This includes both Page 1 and 2 of the application.</inlineHelpText>
    <label>z_Student Application Form (Full)</label>
    <type>Url</type>
</CustomField>