unpackaged/main/default/objects/Opportunity/fields/Student_Family_Support_Situation__c.field-meta.xml
<CustomField>
    <fullName>Student_Family_Support_Situation__c</fullName>
    <label>Student Family/Support Situation</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>