unpackaged/main/default/objects/Opportunity/fields/Student_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Student_Funding_Amount__c</fullName>
    <formula>Net_Tuition__c - Deposit_Amount__c - External_Scholarships_Amount__c - Tentative_Pell_Grant_Amount__c - Tentative_Student_Loan_Amount__c - Tentative_Parent_Loan_Amount__c - Tentative_Private_Loan_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net Tuition minus Deposit Amount, External Scholarships Amount, and Tentative Pell Grant Amount, as well as the Tentative Student, Parent and Private Loan Amounts</inlineHelpText>
    <label>Student Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>