unpackaged/main/default/objects/Opportunity/fields/Student_Hobbies_or_Interests__c.field-meta.xml
<CustomField>
    <fullName>Student_Hobbies_or_Interests__c</fullName>
    <label>Student Hobbies or Interests</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>