unpackaged/main/default/objects/Opportunity/fields/Student_Interview__c.field-meta.xml
<CustomField>
    <fullName>Student_Interview__c</fullName>
    <label>z_Student Interview</label>
    <type>Date</type>
</CustomField>