unpackaged/main/default/objects/Opportunity/fields/Student_Interview_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Student_Interview_Boolean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Student Interview</label>
    <type>Checkbox</type>
</CustomField>