unpackaged/main/default/objects/Opportunity/fields/Student_Loan_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Student_Loan_Amount_Paid__c</fullName>
    <label>Student Loan Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>