unpackaged/main/default/objects/Opportunity/fields/Student_Success_Coach__c.field-meta.xml
<CustomField>
    <fullName>Student_Success_Coach__c</fullName>
    <formula>Enrollment_Record__r.Owner__r.FirstName +&quot; &quot;+  Enrollment_Record__r.Owner__r.LastName</formula>
    <label>Student Success Coach</label>
    <type>Text</type>
</CustomField>