unpackaged/main/default/objects/Opportunity/fields/Submit_Documents_Form_Account__c.field-meta.xml
<CustomField>
    <fullName>Submit_Documents_Form_Account__c</fullName>
    <formula>Account.Submit_Documents_Form__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submit Documents Form</label>
    <type>Text</type>
</CustomField>