unpackaged/main/default/objects/Opportunity/fields/Supplemental_Essay__c.field-meta.xml
<CustomField>
    <fullName>Supplemental_Essay__c</fullName>
    <label>z_Supplemental Essay</label>
    <type>Url</type>
</CustomField>