unpackaged/main/default/objects/Opportunity/fields/TempCounsEmail__c.field-meta.xml
<CustomField>
    <fullName>TempCounsEmail__c</fullName>
    <description>Temporary field for HS counselor email to allow for data migration from Hubspot</description>
    <label>z_TempCounsEmail</label>
    <type>TextArea</type>
</CustomField>