unpackaged/main/default/objects/Opportunity/fields/TempGPA__c.field-meta.xml
<CustomField>
    <fullName>TempGPA__c</fullName>
    <description>Temporary field fo GPA to allow for data migration from Hubspot</description>
    <label>z_TempGPA</label>
    <type>TextArea</type>
</CustomField>