unpackaged/main/default/objects/Opportunity/fields/TempP1email__c.field-meta.xml
<CustomField>
    <fullName>TempP1email__c</fullName>
    <description>Temporary field for parent email to allow for data migration from Hubspot</description>
    <label>z_TempP1email</label>
    <type>TextArea</type>
</CustomField>