unpackaged/main/default/objects/Opportunity/fields/TempP2email__c.field-meta.xml
<CustomField>
    <fullName>TempP2email__c</fullName>
    <description>Temporary field for parent email to allow for data migration from Hubspot</description>
    <label>z_TempP2email</label>
    <type>TextArea</type>
</CustomField>