unpackaged/main/default/objects/Opportunity/fields/Tentative_Financial_Aid_Total__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Financial_Aid_Total__c</fullName>
    <inlineHelpText>Total rolls up from Tuition Sales Document</inlineHelpText>
    <label>Tentative Financial Aid Total</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>