unpackaged/main/default/objects/Opportunity/fields/Tentative_Pell_Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Pell_Grant_Amount__c</fullName>
    <label>Tentative Pell Grant Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>