unpackaged/main/default/objects/Opportunity/fields/Tentative_Student_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Student_Loan_Amount__c</fullName>
    <label>Tentative Student Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>