unpackaged/main/default/objects/Opportunity/fields/Tier_1_Owner__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tier 1 Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>