unpackaged/main/default/objects/Opportunity/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <formula>TEXT(Account.Time_Zone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To update the time zone go to the student&#39;s Account.  For Billing Address make sure Country is United States and update the zip code and the time zone will update too.</inlineHelpText>
    <label>Time Zone</label>
    <type>Text</type>
</CustomField>