unpackaged/main/default/objects/Opportunity/fields/Total_Discounts_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discounts_Amount__c</fullName>
    <description>The sum of the discounts given to the student</description>
    <formula>Pay_in_Full_Discount__c + Early_Enrollment_Discount_Amount__c +  Prior_Pricing_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The sum of the discounts given to the student (Pay in Full + Early Enrollment + Prior Pricing)</inlineHelpText>
    <label>Total Discounts Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>