unpackaged/main/default/objects/Opportunity/fields/Total_Scholarship_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Scholarship_Amount__c</fullName>
    <description>Verto Fund Amount + External Scholarships Amount</description>
    <formula>Verto_Fund_Amount__c + External_Scholarships_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verto Fund Amount + External Scholarships Amount</inlineHelpText>
    <label>Total Scholarship Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>