unpackaged/main/default/objects/Opportunity/fields/Trigger_Quickbooks__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Quickbooks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Quickbooks</label>
    <type>Checkbox</type>
</CustomField>