unpackaged/main/default/objects/Opportunity/fields/Tuition__c.field-meta.xml
<CustomField>
    <fullName>Tuition__c</fullName>
    <description>Student&#39;s gross tuition amount</description>
    <inlineHelpText>Student&#39;s gross tuition amount</inlineHelpText>
    <label>Tuition</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>