unpackaged/main/default/objects/Opportunity/fields/Tuition_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Tuition_Due_Date__c</fullName>
    <label>Tuition Due Date</label>
    <type>Date</type>
</CustomField>