unpackaged/main/default/objects/Opportunity/fields/UNH_Banner_Id__c.field-meta.xml
<CustomField>
    <fullName>UNH_Banner_Id__c</fullName>
    <formula>Account.UNH_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNH Banner Id</label>
    <type>Text</type>
</CustomField>