unpackaged/main/default/objects/Opportunity/fields/UNH_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>UNH_Location_Code__c</fullName>
    <formula>Current_Program__r.Location__r.UNH_Identifier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNH Location Code</label>
    <type>Text</type>
</CustomField>