unpackaged/main/default/objects/Opportunity/fields/utm_content__c.field-meta.xml
<CustomField>
    <fullName>utm_content__c</fullName>
    <label>utm content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>