unpackaged/main/default/objects/Opportunity/fields/Vaccination_Status__c.field-meta.xml
<CustomField>
    <fullName>Vaccination_Status__c</fullName>
    <label>Vaccination Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Vaccinated</fullName>
            </value>
            <value>
                <fullName>Not Vaccinated</fullName>
            </value>
            <value>
                <fullName>Needs Booster</fullName>
            </value>
            <value>
                <fullName>No Plan to Receive Vaccination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>