unpackaged/main/default/objects/Opportunity/fields/Verto_Application_Approved__c.field-meta.xml
<CustomField>
    <fullName>Verto_Application_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Verto Application Approved</label>
    <type>Checkbox</type>
</CustomField>