unpackaged/main/default/objects/Opportunity/fields/Verto_Fund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Verto_Fund_Amount__c</fullName>
    <inlineHelpText>Populated from Tuition Sales Document.</inlineHelpText>
    <label>Verto Fund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>