unpackaged/main/default/objects/Opportunity/fields/Verto_Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Verto_Student_ID__c</fullName>
    <formula>Account.Verto_Student_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verto Student ID</label>
    <type>Text</type>
</CustomField>