unpackaged/main/default/objects/Opportunity/fields/Was_Nominated__c.field-meta.xml
<CustomField>
    <fullName>Was_Nominated__c</fullName>
    <label>z_Was Nominated?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>