unpackaged/main/default/objects/Opportunity/fields/Website_Activity__c.field-meta.xml
<CustomField>
    <fullName>Website_Activity__c</fullName>
    <label>z_Website Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>