unpackaged/main/default/objects/Opportunity/fields/What_drew_this_student_to_Verto__c.field-meta.xml
<CustomField>
    <fullName>What_drew_this_student_to_Verto__c</fullName>
    <label>What drew this student to Verto</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>