unpackaged/main/default/objects/Opportunity/fields/Why_you_selected_those_schools__c.field-meta.xml
<CustomField>
    <fullName>Why_you_selected_those_schools__c</fullName>
    <description>This field is populated from the College Planning Form.</description>
    <inlineHelpText>This field is populated from the College Planning Form.</inlineHelpText>
    <label>z_Why you selected those schools</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>