unpackaged/main/default/objects/Opportunity/fields/X1st_Letter_of_recommendation__c.field-meta.xml
<CustomField>
    <fullName>X1st_Letter_of_recommendation__c</fullName>
    <label>z_1st Letter of recommendation</label>
    <type>Url</type>
</CustomField>