unpackaged/main/default/objects/Opportunity/fields/X2nd_Letter_of_recommendation__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Letter_of_recommendation__c</fullName>
    <label>z_2nd Letter of recommendation</label>
    <type>Url</type>
</CustomField>