unpackaged/main/default/objects/Opportunity/fields/X500_Word_Essay_Sample__c.field-meta.xml
<CustomField>
    <fullName>X500_Word_Essay_Sample__c</fullName>
    <description>This field is populated from the College Planning Form.</description>
    <inlineHelpText>This field is populated from the College Planning Form.</inlineHelpText>
    <label>z_500 Word Essay Sample</label>
    <type>Url</type>
</CustomField>