unpackaged/main/default/objects/Opportunity/fields/z_About_You__c.field-meta.xml
<CustomField>
    <fullName>z_About_You__c</fullName>
    <inlineHelpText>This field is populated from the student application.</inlineHelpText>
    <label>z_About You</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>