unpackaged/main/default/objects/Opportunity/fields/z_Academic_Interests_Disciplines__c.field-meta.xml
<CustomField>
    <fullName>z_Academic_Interests_Disciplines__c</fullName>
    <description>This field is populated from the College Planning Form.</description>
    <inlineHelpText>This field is populated from the College Planning Form.</inlineHelpText>
    <label>z_Academic Interests/Disciplines</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arts and Humanities</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Health and Medicine</fullName>
            </value>
            <value>
                <fullName>Multi-/Interdisciplinary Studies</fullName>
            </value>
            <value>
                <fullName>Public and Social Sciences</fullName>
            </value>
            <value>
                <fullName>Science, Math, and Technology</fullName>
            </value>
            <value>
                <fullName>Social Sciences and Education</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>