unpackaged/main/default/objects/Opportunity/fields/z_Academic_Interests_Other_Explanation__c.field-meta.xml
<CustomField>
    <fullName>z_Academic_Interests_Other_Explanation__c</fullName>
    <description>This field is populated from the College Planning Form.</description>
    <inlineHelpText>This field is populated from the College Planning Form.</inlineHelpText>
    <label>z_Academic Interests Other Explanation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>