unpackaged/main/default/objects/Opportunity/fields/z_Accepted_to_Non_Partner_School_Already__c.field-meta.xml
<CustomField>
    <fullName>z_Accepted_to_Non_Partner_School_Already__c</fullName>
    <description>This field is populated from the College Planning Form.</description>
    <inlineHelpText>This field is populated from the College Planning Form.</inlineHelpText>
    <label>z_Accepted to Non-Partner School Already</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>