unpackaged/main/default/objects/Opportunity/fields/z_ACT_Math_Score__c.field-meta.xml
<CustomField>
    <fullName>z_ACT_Math_Score__c</fullName>
    <label>z_ACT - Math Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACT_Score_Breakout_Numbers</valueSetName>
    </valueSet>
</CustomField>