unpackaged/main/default/objects/Opportunity/fields/z_ACT_Score__c.field-meta.xml
<CustomField>
    <fullName>z_ACT_Score__c</fullName>
    <label>Z_ACT Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>