unpackaged/main/default/objects/Opportunity/fields/z_App_Page_1_Completed__c.field-meta.xml
<CustomField>
    <fullName>z_App_Page_1_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_App Page 1 Completed</label>
    <type>Checkbox</type>
</CustomField>