unpackaged/main/default/objects/Opportunity/fields/z_Application__c.field-meta.xml
<CustomField>
    <fullName>z_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Application</label>
    <type>Checkbox</type>
</CustomField>