unpackaged/main/default/objects/Opportunity/fields/z_Application_Approved__c.field-meta.xml
<CustomField>
    <fullName>z_Application_Approved__c</fullName>
    <label>z_Application Approved</label>
    <type>Date</type>
</CustomField>