unpackaged/main/default/objects/Opportunity/fields/z_Application_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>z_Application_Complete_Date__c</fullName>
    <label>z_Application Complete Date</label>
    <type>Date</type>
</CustomField>