unpackaged/main/default/objects/Opportunity/fields/z_Application_Stage__c.field-meta.xml
<CustomField>
    <fullName>z_Application_Stage__c</fullName>
    <label>z_Application Stage Date</label>
    <type>Date</type>
</CustomField>