unpackaged/main/default/objects/Opportunity/fields/z_Are_you_an_International_Student__c.field-meta.xml
<CustomField>
    <fullName>z_Are_you_an_International_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Are you an International Student?</label>
    <type>Checkbox</type>
</CustomField>