unpackaged/main/default/objects/Opportunity/fields/z_Attempted_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>z_Attempted_Contact_Date__c</fullName>
    <label>z_Attempted Contact Date</label>
    <type>Date</type>
</CustomField>