unpackaged/main/default/objects/Opportunity/fields/z_Biological_Sex__c.field-meta.xml
<CustomField>
    <fullName>z_Biological_Sex__c</fullName>
    <label>z_Biological Sex</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Intersex</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>