unpackaged/main/default/objects/Opportunity/fields/z_CC_RoundRobin__c.field-meta.xml
<CustomField>
    <fullName>z_CC_RoundRobin__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>z_CC RoundRobin</label>
    <type>AutoNumber</type>
</CustomField>