unpackaged/main/default/objects/Opportunity/fields/z_CC_RoundRobinNumber__c.field-meta.xml
<CustomField>
    <fullName>z_CC_RoundRobinNumber__c</fullName>
    <formula>1+MOD(VALUE( z_CC_RoundRobin__c ),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>z_CC_RoundRobinNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>