unpackaged/main/default/objects/Opportunity/fields/z_Check_Activities_Resume__c.field-meta.xml
<CustomField>
    <fullName>z_Check_Activities_Resume__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Activities Resume</label>
    <type>Checkbox</type>
</CustomField>