unpackaged/main/default/objects/Opportunity/fields/z_Check_Med_Educational_Family_Expenses__c.field-meta.xml
<CustomField>
    <fullName>z_Check_Med_Educational_Family_Expenses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_Medical, Educational, Family Expenses</label>
    <type>Checkbox</type>
</CustomField>