unpackaged/main/default/objects/Opportunity/fields/z_Chosen_Partner_School__c.field-meta.xml
<CustomField>
    <fullName>z_Chosen_Partner_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>z_Chosen Partner School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Chosen Partner School</relationshipLabel>
    <relationshipName>Chosen_Partner_School</relationshipName>
    <type>Lookup</type>
</CustomField>