unpackaged/main/default/objects/Opportunity/fields/z_City__c.field-meta.xml
<CustomField>
    <fullName>z_City__c</fullName>
    <formula>Account.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To update go to the Student&#39;s Account.</inlineHelpText>
    <label>z_City</label>
    <type>Text</type>
</CustomField>