unpackaged/main/default/objects/Opportunity/fields/z_Class_Program__c.field-meta.xml
<CustomField>
    <fullName>z_Class_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>z_mc_Class Program</label>
    <referenceTo>Semester__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Class_Program</relationshipName>
    <type>Lookup</type>
</CustomField>