unpackaged/main/default/objects/Opportunity/fields/z_Close_Date_Prior_Value__c.field-meta.xml
<CustomField>
    <fullName>z_Close_Date_Prior_Value__c</fullName>
    <label>z_Close Date Prior Value</label>
    <type>Date</type>
</CustomField>