unpackaged/main/default/objects/Opportunity/fields/z_Closed_Lost_Date__c.field-meta.xml
<CustomField>
    <fullName>z_Closed_Lost_Date__c</fullName>
    <label>z_Closed Lost Date</label>
    <type>Date</type>
</CustomField>