unpackaged/main/default/objects/Opportunity/fields/z_College_and_Career_Goals__c.field-meta.xml
<CustomField>
    <fullName>z_College_and_Career_Goals__c</fullName>
    <description>This field is populated from the College Planning Form.</description>
    <inlineHelpText>This field is populated from the College Planning Form.</inlineHelpText>
    <label>z_College and Career Goals</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>