unpackaged/main/default/objects/Opportunity/fields/z_College_Counseling__c.field-meta.xml
<CustomField>
    <fullName>z_College_Counseling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>z_College Counseling?</label>
    <type>Checkbox</type>
</CustomField>