unpackaged/main/default/objects/Opportunity/fields/z_College_Previously_Attended__c.field-meta.xml
<CustomField>
    <fullName>z_College_Previously_Attended__c</fullName>
    <inlineHelpText>This field is populated from the student application if the student answered yes to previously attended college/university.</inlineHelpText>
    <label>z_College Previously Attended</label>
    <length>50</length>
    <type>Text</type>
</CustomField>