unpackaged/main/default/objects/Opportunity/fields/z_College_Process_Need_Guidance__c.field-meta.xml
<CustomField>
    <fullName>z_College_Process_Need_Guidance__c</fullName>
    <description>This field is populated from the College Planning Form.</description>
    <inlineHelpText>This field is populated from the College Planning Form.</inlineHelpText>
    <label>z_College Process Need Guidance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Choosing the right colleges</fullName>
            </value>
            <value>
                <fullName>Developing my personal statement</fullName>
            </value>
            <value>
                <fullName>Narrowing down my major and career path</fullName>
            </value>
            <value>
                <fullName>Understanding the Verto application process</fullName>
            </value>
            <value>
                <fullName>I do not need additional college counseling or guidance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>