unpackaged/main/default/objects/Opportunity/fields/z_Completed_2_years_of_Social_Studies__c.field-meta.xml
<CustomField>
    <fullName>z_Completed_2_years_of_Social_Studies__c</fullName>
    <label>z_Completed 2 years of Social Studies</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>