unpackaged/main/default/objects/Opportunity/fields/z_Completed_3_years_of_Science__c.field-meta.xml
<CustomField>
    <fullName>z_Completed_3_years_of_Science__c</fullName>
    <label>z_Completed 3 years of Science</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>